Правка каталога в режиме редактирования

--- a/app/views/users/company.html
+++ b/app/views/users/company.html
@@ -27,7 +27,7 @@
 									</figure>
 								</a>
 
-								<div class="tabs-company js-tab_direct">
+								<div class="tabs-company js-tab_direct tabs-shop">
 									<a href="#" class="js-toggle-menu">Меню магазина <i class="fa fa-angle-down"></i></a>
 									<ul>
 										<li class="active"><a href="#tab-I">О магазине</a></li>
