--- a/app/views/users/_users.scss
+++ b/app/views/users/_users.scss
@@ -445,14 +445,18 @@
 
 				ul {
 					display: flex; align-items: center; justify-content: space-between;
-					@include respond-to(md) {flex-wrap: wrap;}
+					@include respond-to(md) {flex-wrap: wrap; padding-bottom: 20px;}
+					@include respond-to(xs) {padding-bottom: 20px;}
 					& > li {
 						display: flex; align-items: center; justify-content: center;
 						font-family: $HelveticaL; font-size: 16px; letter-spacing: 0.2px;
-						position: relative; height: auto; width: 20%;
+						position: relative; height: auto; padding: 0 13px;
 						box-sizing: border-box;
 						@include respond-to(md) {width: 25%; padding-bottom: 20px!important;}
-						@include respond-to(xs) {width: 50%;}
+						@include respond-to(xs) {
+							justify-content: start;
+							width: 50%; padding-left: 15px;
+						}
 						
 						&:after {
 							content: '';
@@ -475,14 +479,16 @@
 							@include font-type ($CormacEL, 22px, 32px, 0); color: #000;
 							width: 420px;
 							@include respond-to(lg) {width: 320px;}
-							@include respond-to(md) {width: calc(100% - 180px);}
-							@include respond-to(sm) {width: calc(100% - 80px); padding-left: 100px; margin-bottom: 30px;}
+							@include respond-to(md) {padding-left: 15px; width: calc(100% - 100px);}
+							
 						}
 						&.view {
 							flex-direction: column; align-items: start; justify-content: center;
 							@include font-type ($HelveticaR, 16px, 24px, 0.4px);
 							width: 314px; padding-top: 4px; padding-left: 35px;
 							@include respond-to(lg) {padding-left: 30px;}
+							//@include respond-to(md) {width: calc(50% - 40px);}
+							@include respond-to(md) {width: 100%; padding-left: 15px;}
 							.date {
 								display: flex; justify-content: space-between;
 								width: 168px;
@@ -490,41 +496,42 @@
 									@include font-type ($HelveticaL, 10px, 24px, 1px); text-transform: uppercase; color: #4b5769;
 								}
 							}
-							@include respond-to(md) {width: calc(50% - 40px);}
-							@include respond-to(sm) {width: 100%; padding-left: 100px;}
 						}
 
 						&.donation {
-							padding-right: 12px; flex-direction: row; flex-direction: column;
-							@media (max-width: 1250px) {flex-direction: column;}
-							@include respond-to(md) {flex-direction: row;}
-							
-							@include respond-to(xs) {flex-direction: row; &:after {display: none;}}
+							flex-direction: row; display: flex; justify-content: center;
+							font-size: 12px; padding-right: 12px; width: 19%;
+							@include respond-to(lg) {flex-direction: column;}
+							@include respond-to(md) {width: 25%;}
+							@include respond-to(xs) {flex-direction: row; justify-content: start; width: 50%; &:after {display: none;}}
 							& > span {
 								&:first-child {
 									margin-right: 5px;
 								}
 							}
 							i {
-								color: #c0d1dd; font-size: 13px;
+								color: #c0d1dd; font-size: 13px; margin-left: 0;
 								@media (max-width: 1250px) {
 									margin-right: 1px;
 								}
+								@include respond-to(xs) {margin-left: 0;}
 							}
 						}
 						&.status {
-							width: 150px; letter-spacing: 0.5px;
+							width: 205px; letter-spacing: 0.5px;
 							@include respond-to(sm) {width: 25%;}
 							@include respond-to(xs) {width: 50%;}
 						}
 						&.edit {
 							width: 83px; padding-left: 0; padding-top: 3px;
 							@include respond-to(md) {width: 12.5%;}
+							@include respond-to(xs){width: 25%; padding-left: 15px;}
 							
 						}
 						&.delete {
 							width: 64px; padding-right: 17px; padding-top: 4px;
 							@include respond-to(md) {width: 12.5%;}
+							@include respond-to(xs){width: 25%; padding-left: 15px;}
 							
 							i {color: #89a1b3; font-size: 18px;}
 						}
