--- a/app/views/market/_product.scss
+++ b/app/views/market/_product.scss
@@ -1,4 +1,6 @@
-.product {
+.images img {margin: 0 !important;}
+.popup.popup-mobile {width: 100%; left: 0; margin-left: 0;}
+.product { 
 	&-body {
 
 		display: flex; justify-content: space-between;
@@ -13,6 +15,16 @@
 		}
 		header {
 			padding-top: 29px;
+
+			#galery_wrapp {
+				&:after {
+					content: '';
+					display: table;
+					width: 100%;
+					clear: both;
+				}
+			}
+
 			figure {
 				text-align: center;
 				width: 100%; margin-bottom: 53px;
@@ -24,6 +36,9 @@
 
 				img {max-width: 100%;}
 
+				&.thumb_img {
+					margin-bottom: 0; width: auto; float: left;
+				}
 			}
 		}
 
@@ -80,7 +95,7 @@
 					border: 1px solid #edf3f6; border-radius: 5px;
 				}
 				.btn-reserve {
-					display: flex; flex-flow: row nowrap; align-items: center; min-height: 90px; max-width: 380px;
+					display: flex; flex-flow: row nowrap; align-items: center; min-height: 100px;
 					padding: 0 30px; margin: 10px 0;
 					background: white; border-radius: 40px;
 					line-height: 1; position: relative;
@@ -88,14 +103,8 @@
 						background: transparent; box-shadow: none;
 
 					}
-					&:first-child {
-						@include respond-to(sm) {width: 48%;}
-						@include respond-to(xs) {width: 100%;}	
-					}
 					&:last-child {
-						
 						@include respond-to(xs) {
-							width: 100%;
 							border-left: none; border-top: 2px solid #edf3f6; border-radius: 0; 
 						}
 					} 
@@ -111,8 +120,11 @@
 					}
 					figure {
 						margin-right: 36px;
-						border-radius: 50%; background-size: cover; width: 60px; height: 60px;
 						@include respond-to(md){margin-right: 10px;}
+						img {max-height: 60px;}
+						&.circle {
+							border-radius: 50%; background-size: cover; width: 60px; height: 60px;
+						}
 					}
 					section {
 						small {
