--- a/app/views/market/_product.scss
+++ b/app/views/market/_product.scss
@@ -77,13 +77,14 @@
 				display: flex; align-items: center;
 				margin-bottom: 43px;
 				@include respond-to(md) {justify-content: space-between;}
+				@include respond-to(sm) {justify-content: start;}
 				@include respond-to(xs) {justify-content: space-between;}
-				
+
 				li {
 					@include font-type($CormacB, 34px, 1, 0.5px); color: $link-color;
 					margin-right: 28px;
-					@include respond-to(xs) {font-size: 24px;}
-					@include respond-to(sm) {color: #000; font-family: $CormacEL;}
+					@include respond-to(md) {font-size: 24px;}
+					@include respond-to(sm) {color: #000; font-family: $CormacEL; font-size: 28px;}
 					@include respond-to(xs) {font-size: 24px;}
 
 					&:last-child{margin-right: 0;}
@@ -92,6 +93,7 @@
 						margin-right: 12px;
 
 						@include respond-to(md) {font-size: 22px;}
+						@include respond-to(sm) {font-size: 26px;}
 						@include respond-to(xs) {font-size: 22px;}
 					}
 
@@ -161,7 +163,9 @@
 				border-top: 1px solid #f2f2f2; border-bottom: 1px solid #f2f2f2;
 				.btn {
 					@include font-type($CormacEL, 16px, 1, 0.2px); outline: none;
-					width: 218px; padding: 20px 0; margin-right: 57px;
+					width: auto; padding: 20px 30px; margin-right: 50px;
+					&:last-child {margin-right: 0;}
+					@include respond-to(lg) {margin-right: 5px;}
 					@include respond-to(md) {
 						width: 100%; margin-bottom: 25px;
 					}
