правки для рабочего сайта

--- a/app/views/_style.scss
+++ b/app/views/_style.scss
@@ -4,6 +4,10 @@
 	figure {margin-right: 30px;}
 }
 
+input[type="checkbox"] {
+	-webkit-appearance: checkbox!important;
+}
+
 
 /*********************************/
 /********** Typography ***********/
