--- a/app/views/funds/_fund.scss
+++ b/app/views/funds/_fund.scss
@@ -46,7 +46,8 @@
 
 	&-me {
 		display: flex; flex-direction: row; flex-wrap: nowrap; align-items: center;
-		padding: 40px 0;
+		padding: 40px 0; 
+		@include respond-to(md) {width: 100%;}
 		@include respond-to(sm) {
 			flex-direction: column; align-items: start;
 			width: calc(100% + 30px); padding-left: 15px; margin-left: -15px;
