--- a/app/views/market/_market.scss
+++ b/app/views/market/_market.scss
@@ -45,8 +45,21 @@
 		}
 	}
 	.checkboxes {
-		float: right;
+		display: flex; align-items: center;
+
+		float: right; min-height: 65px;
+
 		@include respond-to(lg) {float: left; clear: both; padding-bottom: 30px;}
+		@include respond-to(md) {flex-direction: column; align-items: start;}
+
+		& > section {
+			@include respond-to(md) {
+				margin-bottom: 20px
+			}
+			&:last-child {margin-bottom: 0;}
+		}
+
+		input {display: none;}
 	}
 }
 
