--- a/app/views/_variables.scss
+++ b/app/views/_variables.scss
@@ -17,7 +17,7 @@ $helv: Helvetica, sans-serif;
 
 // Cormac
 $CormacEL:'Cormac-ExtraLight', sans-serif;
-$CormacB:'cormac-book', sans-serif;
+$CormacB:'Cormac-Book', sans-serif;
 
 
 // Helvetica
