--- a/app/views/market/_product.scss
+++ b/app/views/market/_product.scss
@@ -1,4 +1,4 @@
-.images img {margin: 0 !important;}
+.images img {margin: 0 !important;} 
 .popup.popup-mobile {width: 100%; left: 0; margin-left: 0;}
 .product { 
 	&-body {
@@ -180,6 +180,301 @@
 			p {
 				@include font-type($HelveticaR, 16px, 24px, 0.3px);
 				width: 90%;
+				.thin {font-family: $HelveticaL;}
+			}
+		}
+
+	}
+}
+
+
+.product {
+	&-body {
+
+		display: flex; justify-content: space-between;
+		padding-top: 3px; margin-bottom: 64px;
+		@include respond-to(sm) {
+			flex-direction: column;
+		}
+
+		& > header, & > section {
+			width: 50%;
+			@include respond-to(sm) {width: 100%;}
+		}
+		.images {
+			@include respond-to(lg) {width: 47%;}
+			@include respond-to(sm) {width: 100%; margin-bottom: 50px;}
+			figure {
+				text-align: left;
+				width: 100%; margin-bottom: 10px; 
+				background-size: cover; background-position: center;
+				@include respond-to(sm) {
+					display: none;
+				}
+				&:first-child {display: block;}
+				&:last-child {margin-bottom: 0;}
+
+				img {max-width: 100%;}
+			}
+
+			&-preview {
+				display: flex; flex-wrap: wrap;
+				li {
+					margin-right: 20px; &:last-child {margin-right: 0;}
+					a {
+						display: block; width: 80px; height: 80px;
+						background-size: cover; background-position: center; 
+					}
+				}
+			}
+		}
+
+		& > section {
+			padding-left: 10px; padding-top: 6px; position: relative;
+			@include respond-to(lg) {width: 49%;}
+			@include respond-to(md){padding-left: 15px;}
+			@include respond-to(sm){padding: 0; width: 100%;}
+			.auction-logo {
+				position: absolute; right: -49px; top: 12px; padding: 9px 0;
+				background: #7937bf;
+				@include respond-to(lg) {right: -15px;}
+			}
+			h2 {
+				@include font-type($CormacB, 34px, 42px, 0);
+				margin-bottom: 29px;
+				@include respond-to(xs) {font-size: 30px; line-height: 38px;}
+			}
+
+			ul.info {
+				display: flex;
+				margin-bottom: 40px;
+				@include respond-to(md) {flex-direction: column;}
+				li {
+					display: flex; align-items: center;
+					@include font-type($HelveticaL, 10px, 1, 1.2px); color: #79879e; text-transform: uppercase;
+					margin-right: 23px;
+					@include respond-to(md) {
+						margin-right: 0; margin-bottom: 15px;
+					}
+					&:last-child {
+						margin-right: 0;
+						@include respond-to(md) {margin-bottom: 0;}
+					}
+					i {font-size: 16px; margin-right: 6px;}
+				}
+			}
+
+			ul.price {
+				display: flex; align-items: center;
+				margin-bottom: 36px;
+				li {
+					@include font-type($CormacB, 34px, 1, 0.5px); color: #000;
+					margin-right: 28px; position: relative; padding-top: 12px;
+					@include respond-to(sm) {
+						color: #000; font-family: $CormacEL;
+					}
+					sup {
+						@include font-type($HelveticaL, 9px, 1, 1.8px); color: #4b5769; text-transform: uppercase;
+						position: absolute; top: 0; left: 0;
+					}
+					i {
+						color: #c6dbff; font-size: 26px;
+						margin-right: 12px;
+					}
+				}
+			}
+
+			.auction {
+				padding-left: 2px; padding-top: 48px; padding-bottom: 39px; margin-bottom: 17px;
+				border-top: 1px solid #d9e4ea; border-bottom: 1px solid #d9e4ea;
+				& > ul {
+					display: flex; flex-wrap: wrap;
+					margin-bottom: 31px;
+					@include respond-to(md) {
+						flex-direction: column; align-items: start;
+					}
+					
+					li {
+						@include font-type($CormacB, 16px, 1, 0); color: #4b5769; text-align: center;
+						position: relative; min-width: 100px; padding-top: 17px; margin-right: 29px;
+						@include respond-to(md) {
+							text-align: left;
+							margin-bottom: 25px; margin-right: 0;
+						}
+						&:first-child {text-align: left;}
+						&:last-child {
+							margin-right: 0;
+							@include respond-to(md) {margin-bottom: 0;}
+						}
+						& > a {
+							color: $link-color;
+						}
+						sup {
+							@include font-type($HelveticaL, 9px, 1, 1.8px); color: #4b5769; text-transform: uppercase;
+							position: absolute; top: 0;
+						}
+					}
+				}
+
+				&-rate {
+					.btn-gr {
+						position: relative; padding-top: 16px; left: -2px;
+						& > sup {
+							@include font-type($HelveticaL, 9px, 1, 1.7px); color: #4b5769; text-transform: uppercase;
+							position: absolute; top: 0;
+							.rub {text-transform: none;}
+						}
+						& > .btn-grey {
+							display: inline-block; padding: 0 0 0 18px; margin-right: 13px; position: relative; left: -9px;
+							background: #f4f7fb; border-radius: 100px;
+							@include respond-to(xs) {
+								padding-left: 11px; margin-right: 0;
+								background: none;
+							}
+							.price {
+								@include font-type($CormacB, 22px, 1, 0.5px); color: #000;
+								display: inline-block; padding: 19px 0;	margin-right: 80px;
+								@include respond-to(md) {margin-right: 15px;}
+							}
+							.btn {
+								margin-right: 0; padding: 23px 36px; letter-spacing: 0.7px;
+								@include respond-to(xs) {width: 100%;}
+							}
+						}
+						& > a {
+							@include font-type($CormacB, 16px, 1, 0.5px);
+							@include respond-to(lg) {display: block; margin-top: 30px;}
+							@include respond-to(xs) {text-align: center;}
+
+							i {
+								font-size: 21px; margin-right: 5px;
+							}
+						}
+						
+					}
+				}
+				&-info {
+					position: relative;
+					.promotion {
+						display: flex; align-items: center;
+
+						position: absolute; right: -50px; top: 45px; padding: 13px 30px 7px 3px;
+						background: #7937bf;
+						@include respond-to(lg) {position: static; margin-bottom: 30px;}
+						@include respond-to(xs) {
+							flex-direction: column; 
+							padding: 13px 15px 7px 15px;
+						}
+						p {
+							@include font-type($CormacEL, 16px, 23px, 0); color: #fff; text-align: left;
+							@include respond-to(xs) {text-align: center;}
+							i {font-weight: 600;}
+						}
+					}
+					& > p {
+						@include font-type($HelveticaT, 18px, 28px, 1.1px); color: #000;
+						margin-bottom: 27px;
+
+					}
+					ol {
+						padding-top: 5px; padding-left: 20px;
+						li {
+							@include font-type($HelveticaT, 18px, 1, 1.1px); color: #000;
+							margin-bottom: 7px; 
+							list-style-type: decimal;
+							&:last-child {margin-bottom: 0;}
+						}
+					}
+				}
+			}
+
+			.btn-company {
+				display: flex; flex-direction: column; align-items: start; 
+
+				margin-bottom: 35px; position: relative; left: -11px;
+				@include respond-to(sm) {
+					display: inline-block; width: 100%; padding: 0 15px;
+					border: 1px solid #edf3f6; border-radius: 5px;
+				}
+				.btn-reserve {
+					display: flex; flex-flow: row nowrap; align-items: center; min-height: 82px; max-width: 380px;
+					padding: 0 34px 0 11px; margin-bottom: 10px;
+					background: white; border-radius: 40px;
+					line-height: 1; position: relative;
+					@include respond-to(sm){
+						background: transparent; box-shadow: none;
+
+					}
+					&:first-child {
+						@include respond-to(sm) {width: 48%;}
+						@include respond-to(xs) {width: 100%;}	
+					}
+					&:last-child {
+						
+						@include respond-to(xs) {
+							width: 100%;
+							border-left: none; border-top: 2px solid #edf3f6; border-radius: 0; 
+						}
+					} 
+					&.user {
+						padding: 0 33px 0 11px;
+						figure {
+							width: 60px; height: 60px;
+							border-radius: 50%; background-size: cover; background-position: center;
+						}
+					}
+					a {
+						@include respond-to(sm) {color: #000; font-family:$HelveticaL; letter-spacing: 0.5px;}
+					}
+					.icon-wr {
+						text-align: center;
+						position: absolute; display: inline-block; width: 28px; height: 28px; padding-top: 6px;
+						background: $btn-color; border-radius: 50%; top: -5px; right: -1px;
+						@include respond-to(sm){display: none;}
+						i {color: #000;}
+					}
+					figure {
+						display: flex; align-items: center; justify-content: center;
+						margin-right: 20px;
+						border-radius: 50%; background-size: cover; width: 60px; height: 60px;
+						@include respond-to(md){margin-right: 10px;}
+					}
+					section {
+						padding: 20px 0;
+						a {margin-bottom: 10px; display: block;}
+						small {
+							@include font-type($HelveticaL, 10px, 1, 1.3px); color: #79879e; text-transform: uppercase;
+							display: block; margin-bottom: 8px;
+						}
+
+						div {a {font-size: 12px; color: #000; text-decoration: underline; &:hover {text-decoration: none;}}}
+						
+					}
+					
+				}
+			}
+
+			& > .btn-gr {
+				margin-bottom: 19px; padding: 24px 0; clear: both; outline: none;
+				border-top: 1px solid #f2f2f2; border-bottom: 1px solid #f2f2f2;
+				.btn {
+					@include font-type($CormacEL, 16px, 1, 0.2px); outline: none;
+					width: 218px; padding: 20px 0; margin-right: 57px;
+					@include respond-to(md) {
+						width: 100%; margin-bottom: 25px;
+					}
+				}
+				a {
+					@include font-type($CormacEL, 16px, 1, 0.2px);
+					@include respond-to(md) {width: 100%; text-align: center; display: block;}
+					i {font-size: 22px; margin-right: 5px;}
+				}
+			}
+
+			p {
+				@include font-type($HelveticaR, 16px, 24px, 0.3px);
+				width: 90%;
+				@include respond-to(xs) {width: 100%;}
 				.thin {font-family: $HelveticaL;}
 			}
 		}
