--- a/app/views/market/_market.scss
+++ b/app/views/market/_market.scss
@@ -97,7 +97,6 @@
 
 			// ITEM – http://prntscr.com/gg2pz0
 			a {
-				display: block;
 				&:hover {article {h2 {color: #4489ff;}}}
 			}
 
@@ -107,14 +106,13 @@
 
 				img {width: 100%;}
 
-				figcaption {
-					position: absolute; right: 10px; top: 10px;
-					@include respond-to(xs) {display: none;}
-				}
+				// figcaption {
+				// 	position: absolute; right: 10px; top: 10px;
+				// 	@include respond-to(xs) {display: none;}
+				// }
 			}
 
 			article {
-				padding: 20px;
 				@include respond-to(xs) {display: flex; flex-direction: column; position: relative; width: 100%; padding-right: 5px;}
 
 				h2 {@include font-type($CormacEL, 18px, 26px, -0.5px); color: $main-color-text; color: #000; min-height: 60px; margin-bottom: 10px;}
