--- a/app/views/market/_product.scss
+++ b/app/views/market/_product.scss
@@ -1,3 +1,91 @@
+//превью товара в списке http://prntscr.com/h1uwdh
+.preview{
+	background: #fff;
+
+	header {
+		margin-bottom: 5px;
+		a{
+			&:hover {
+				figcaption {
+					opacity: 1;
+				}
+			}
+		}
+		figure {
+			position: relative;
+			img {max-width: 100%;}
+			figcaption {
+				width: 100%; height: 100%; position: absolute; top: 0; left: 0;
+				background: rgba(255,255,255, 0.5);
+				opacity: 0; transition: .4s all ease;
+
+				span {
+					position: absolute;
+
+					&.favorites {
+						text-align: center; @include font-type($CormacEL, 16px, 1, 0.5px); color: #fff;
+						width: 78px; height: 68px; padding-top: 20px; padding-left: 7px; top: 50%; margin-top: -34px; left: 50%; margin-left: -39px;
+						background: url(../img/heart.png);
+					}
+				}
+			}
+			
+		}
+	}
+
+	section {
+		padding: 0 17px;
+		h2 {
+			line-height: 14px; min-height: 52px !important;
+			margin-top: 0; margin-bottom: 8px;
+			a {
+				@include font-type($CormacB, 16px, 24px, 0.5px); color: #000;
+			}
+		}
+		p {
+			@include font-type($HelveticaR, 12px, 16px, 0.5px); color: #000;
+			margin-bottom: 5px;
+			span {margin-left: 10px;}
+		}
+
+		& > ul {
+			display: flex; flex-wrap: wrap;
+
+			li {
+				display: inline-block; padding: 0 5px; margin-right: 5px;
+				background: #efefef; border-radius: 9px;
+				&:last-child {margin-right: 0;}
+				a {color: #000; font-size: 12px;}
+			}
+		}
+	}
+
+	footer {
+		display: flex; justify-content: space-between; align-items: center;
+
+		padding: 6px 20px 15px 20px;
+		a {
+			figure {
+				display: flex; align-items: center;
+
+				span {
+					width: 31px; height: 31px; margin-right: 10px;
+					border-radius: 50%; background-position: center; background-repeat: none;
+				}
+				figcaption {
+					@include font-type($CormacB, 12px, 12px, 0.5px); color: #000;
+					width: 100px; height: 12px;
+					overflow: hidden; white-space: nowrap; text-overflow: ellipsis;
+				}
+			}
+		}
+		p {
+			@include font-type($CormacB, 16px, 1, 0.5px); color: #000;
+			margin-bottom: 0;
+		}
+	}
+}
+
 .images img {margin: 0 !important;} 
 .popup.popup-mobile {width: 100%; left: 0; margin-left: 0;}
 .product { 
