--- a/app/views/market/_product.scss
+++ b/app/views/market/_product.scss
@@ -49,12 +49,15 @@
 		}
 
 		& > ul {
-			display: flex; flex-wrap: wrap;
+			display: flex; flex-wrap: wrap; justify-content: flex-start;
 
 			li {
 				display: inline-block; padding: 0 5px; margin-right: 5px;
-				background: #efefef; border-radius: 9px;
+				background: #F1F3F7; border-radius: 9px;
 				&:last-child {margin-right: 0;}
+				&:after {
+					content: none;
+				}
 				a {color: #000; font-size: 12px;}
 			}
 		}
