--- a/app/views/users/_users.scss
+++ b/app/views/users/_users.scss
@@ -103,6 +103,10 @@
 			margin: 0 0 41px;
 		}
 
+		img {
+			max-width: 170px; max-height: 170px;
+		}
+
 		figure {
 			figcaption {
 				@include font-type ($CormacEL, 16px, 22px, 0.1px); color: #9d988c;
@@ -444,15 +448,15 @@
 				display: block; margin: 10px 0 !important; padding: 0 !important; overflow: hidden;
 
 				ul {
-					display: flex; align-items: center; justify-content: center;
+					display: flex; align-items: center; justify-content: space-between;
 					@include respond-to(md) {flex-wrap: wrap; padding-bottom: 20px;}
 					@include respond-to(xs) {padding-bottom: 20px;}
 					& > li {
 						display: flex; align-items: center; justify-content: center;
 						font-family: $HelveticaL; font-size: 16px; letter-spacing: 0.2px;
-						position: relative; height: auto;
+						position: relative; height: auto; padding: 0 13px;
 						box-sizing: border-box;
-						@include respond-to(md) {width: 25%;}
+						@include respond-to(md) {width: 25%; padding-bottom: 20px!important;}
 						@include respond-to(xs) {
 							justify-content: start;
 							width: 50%; padding-left: 15px;
@@ -471,30 +475,24 @@
 						}
 
 						&.img {
-							justify-content: start;
-							width: 10%; padding-right: 20px;
+							width: 80px; margin-right: 20px;
 							@include respond-to(md) {margin-bottom: 20px;}
-							@include respond-to(sm) {width: 100px;}
 						}
 						&.name {
 							justify-content: start;
-							@include font-type ($CormacB, 18px, 22px, 0); color: #000;
-							width: 22%; padding-right: 30px;
-
+							@include font-type ($CormacEL, 22px, 32px, 0); color: #000;
+							width: 420px;
+							@include respond-to(lg) {width: 320px;}
 							@include respond-to(md) {padding-left: 15px; width: calc(100% - 100px);}
 							
 						}
 						&.view {
 							flex-direction: column; align-items: start; justify-content: center;
 							@include font-type ($HelveticaR, 16px, 24px, 0.4px);
-							width: 19%; padding-top: 4px;
-							
-							@include respond-to(md) {
-								width: 100%; padding-left: 15px; padding-bottom: 30px;
-							}
-							&:after {
-								@include respond-to(md) {display: none;}
-							} 
+							width: 314px; padding-top: 4px; padding-left: 35px;
+							@include respond-to(lg) {padding-left: 30px;}
+							//@include respond-to(md) {width: calc(50% - 40px);}
+							@include respond-to(md) {width: 100%; padding-left: 15px;}
 							.date {
 								display: flex; justify-content: space-between;
 								width: 168px;
@@ -504,27 +502,17 @@
 							}
 						}
 
-						&:nth-child(4){
-							width: 15%;
-							@include respond-to(md) {width: 25%;}
-							@include respond-to(xs) {width: 100%;}
-						}
-
 						&.donation {
 							flex-direction: row; display: flex; justify-content: center;
-							font-size: 12px; width: 15%;
-							
+							font-size: 12px; padding-right: 12px; width: 19%;
+							@include respond-to(lg) {flex-direction: column;}
 							@include respond-to(md) {width: 25%;}
-							@include respond-to(sm) {flex-direction: column;}
-							@include respond-to(xs) { font-size: 16px; flex-direction: row; justify-content: start; width: 100%;}
+							@include respond-to(xs) {flex-direction: row; justify-content: start; width: 50%; &:after {display: none;}}
 							& > span {
 								&:first-child {
 									margin-right: 5px;
-									@include respond-to(sm) {margin-right: 0; margin-bottom: 5px;}
-									@include respond-to(xs) {margin-bottom: 0; margin-right: 15px;}
 								}
 							}
-							.rub {line-height: 12px;}
 							i {
 								color: #c0d1dd; font-size: 13px; margin-left: 0;
 								@media (max-width: 1250px) {
@@ -534,32 +522,20 @@
 							}
 						}
 						&.status {
-							width: 13%; letter-spacing: 0.5px;
-
-							@include respond-to(md) {width: 30%; font-size: 14px;}
-							@include respond-to(xs) {width: 100%;}
+							width: 205px; letter-spacing: 0.5px;
+							@include respond-to(sm) {width: 25%;}
+							@include respond-to(xs) {width: 50%;}
 						}
-
-						&:nth-child(4), &.donation, &.status {
-							@include respond-to(xs) {margin-bottom: 25px;}
-							&:after {
-								@include respond-to(xs) {
-									top: auto; right: 5%; bottom: -8px; width: 90%; height: 1px; 
-								}
-							}
-						}
-
 						&.edit {
-							width: 3%; padding-left: 10px; padding-right: 5px;
-
-							@include respond-to(md) {width: 10%;}
-							@include respond-to(xs){width: 50%; justify-content: center;}
+							width: 83px; padding-left: 0; padding-top: 3px;
+							@include respond-to(md) {width: 12.5%;}
+							@include respond-to(xs){width: 25%; padding-left: 15px;}
 							
 						}
 						&.delete {
-							width: 3%; padding-right: 10px; padding-left: 5px;
-							@include respond-to(md) {width: 10%;}
-							@include respond-to(xs){width: 50%; justify-content: center;}
+							width: 64px; padding-right: 17px; padding-top: 4px;
+							@include respond-to(md) {width: 12.5%;}
+							@include respond-to(xs){width: 25%; padding-left: 15px;}
 							
 							i {color: #89a1b3; font-size: 18px;}
 						}
@@ -571,7 +547,7 @@
 				//////////////////////////////////////////////////////////////
 				//////////////////////////////////////////////////////////////
 				//////////////////////////////////////////////////////////////
-				display: flex; flex-wrap: wrap; justify-content: space-between;
+				display: flex; flex-wrap: wrap; justify-content: flex-start;
 
 				//////////////////////////////////////////////////////////////
 				//////////////////////////////////////////////////////////////
@@ -587,7 +563,7 @@
 					
 
 					// ITEM – http://prntscr.com/gg2pz0
-					a {
+					& > a {
 						display: block;
 
 						figure {
